che7/microk8s/ingress-prd.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  tls:
  - hosts:
    - ade.ops.maap-project.org
    secretName: default-tls-secret
  rules:
  - host: ade.ops.maap-project.org
  - http:
      paths:
      - path: /
        backend:
          serviceName: nginx-deployment
          servicePort: 80
