che7/microk8s/ingress-stg.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: default-ingress
  annotations:
    kubernetes.io/ingress.class: "public"

    # Add the following line (staging first for testing, then apply the prod issuer)
    cert-manager.io/cluster-issuer: "letsencrypt-staging" 
spec:
  tls:
  - hosts:
    - ade.<env>.maap-project.org # REPLACE
    secretName: default-tls-secret
  rules:
  - host: ade.<env>.maap-project.org # REPLACE
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-deployment
            port:
              number: 80
